[package]
name = "main"
version = "0.1.0"
authors = ["Poovamraj T T <poovamraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screen-capture = { path = "../screen-capture"}
image = "0.23.4"
lodepng = "2.5.0"
bmp = "0.5.0"